--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -12,11 +12,28 @@ $tp 	: $tablet-portrait;
 $tl 	: $tablet-lanscape;
 $d 		: $desktop;
 
-// Fuentes
-
 // Colores
-$plomo: #ACACAC;
-$turquesa: #0D7D9F;
-$turquesa-dark: #02556E;
-$grislight: #707071;
-$verde : #A2B440;
+
+$orange : #FFA300; 
+$orange-hover : #E59300; 
+$orange-light : #FFD58B;
+
+
+
+$green : #19CE74; 
+$green-dark : #009669;
+$green-light : #86ECB9;
+
+$blue : #2274FF; 
+$blue-dark : #003287;
+$blue-light : #8FB9FF;
+
+$black : #000000; 
+$black2 : #18191C; 
+$black-light : #5F6268; 
+
+$gray : #BFC1C5;
+$gray-dark : #B7C0CE; 
+$gray-light : #F3F4F5; 
+
+$white : #F3F4F5; 
