--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -1,12 +1,12 @@
 .btn-example {
-    border:1px solid $verde;
-    color: $verde;
+    border:1px solid $green;
+    color: $green;
     font-size: 22px;
     border-radius: 0;
     padding: 8px 30px;
     &:hover {
-        border:1px solid $verde;
-        color: $verde;
+        border:1px solid $green;
+        color: $green;
         opacity: 0.8;
     }
 }
