--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -1,5 +1,5 @@
 .home  {
-    //background-image: url(../images/home.png);
+    // background-image: url(../images/home.png);
     background-position: top center;
     // background-position: center 55px;
 }
@@ -40,6 +40,8 @@
         margin-right: 28px;
         .item-cloud {
             margin-right: 12px;
+            position: relative;
+            top: 2px
         }
     }
 }
@@ -80,6 +82,7 @@
 
 .lista-nav {
     display: flex;
+    margin:0;
     li {
         list-style: none;
         margin-right: 43px;
@@ -95,22 +98,96 @@
     margin-right: 22px;
 }
 
-.btn-ingresar {
-    background-color: $orange;
-    color: white;
-    font-size: 14px;
-    border-radius: 100px;
-    padding: 0.8rem 1.6rem;
-    display: flex;
+.banner-info {
+    padding: 12px 0 0 0;
+  h1 {
+    color: $blue;
+    font-size: 50px;    
+    font-family: $fontRaleway;
+    font-weight: 900;
+  }
+  p {
+      color: $black-light;
+  }
+  .cta-banner {
+    margin-top: 25px;
+  }   
+}
+
+
+/* Slider */
+
+.box-items-slider {
+    margin-top: 60px;
     position: relative;
+    height: 90px;
+    z-index: 1;
+}
+
+.box-items-slider-inner {
+    display: flex;
+    position: absolute;
+}
+
+.item-slider {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    i {
-        margin-right: 11px;
-        position: relative;
-        display: flex;
+    justify-content: center;
+    background-color: #E7F0FF;
+    text-align: center;
+    margin-right: 29px;
+    width: 160px;
+    height: 90px;
+    span {
+        color: $blue-dark;
+        font-size: 14px;
+        font-weight: bold;
+        margin-top: 2px;
     }
-    &:hover {
-        background-color: $orange-hover;
-        color:white;
+}
+
+
+.carousel-indicators {
+    justify-content: flex-end;
+    right: -65px;
+    bottom: -100px;
+    li  {
+        display: inline-block;
+        width: 16px;
+        height: 16px;
+        margin: 0px 5px;
+        cursor: pointer;
+        background-color: rgba(0,0,0,0);
+        border: 2px solid #fff;
+        border-radius: 10px;
+    }
+    .active {
+        width: 16px;
+        height: 16px;
+        margin: 0px 5px;
+        background-color: #fff;
+    }
+}
+
+.box-bg {
+    position: absolute;
+    // width: 514px;
+    width: 37%;
+    height: 480px;
+    background: linear-gradient(180deg, #80D7EA 13.68%, #1F5BC1 97.86%);
+    z-index: 10;
+    top: 0;
+    right: 0;
+}
+
+.box-slider {
+    z-index: 100;
+    position: relative;
+}
+
+.slider {
+    .container-fluid {
+        position: relative;
     }
 }
