add section ayuda

--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -41,3 +41,10 @@
         color:white;
     }
 }
+
+.btn-busqueda {
+    color: #fff;
+    background-color: $green;
+    border-color: #109954;;
+    padding: 0 30px;
+}
