--- a/css/main.css
+++ b/css/main.css
@@ -3151,8 +3151,11 @@ body {
   color: white;
 }
 
-.home {
-  background-position: top center;
+.btn-busqueda {
+  color: #fff;
+  background-color: #19CE74;
+  border-color: #109954;
+  padding: 0 30px;
 }
 
 .header-top {
@@ -3371,6 +3374,85 @@ body {
 
 .slider .container-fluid {
   position: relative;
+}
+
+.home {
+  background-position: top center;
+  height: 1500px;
+}
+
+section.section-ayuda {
+  margin-top: 116px;
+}
+
+.subtitle {
+  color: #003287;
+  font-family: "Raleway", sans-serif;
+  font-size: 37px;
+  width: 100%;
+  text-align: center;
+  font-weight: bold;
+}
+
+.box-pregunta {
+  margin-top: 6px;
+  margin: 4px auto 0;
+}
+
+.box-pregunta .input-busqueda {
+  width: 430px;
+  height: 60px;
+  background-color: #F3F4F5;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border: 1px solid #B7C0CE;
+  padding: 0.375rem 0.75rem;
+  font-size: 14px;
+  color: #5F6268;
+}
+
+.btn-busqueda {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.box-items-pregunta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  width: 100%;
+  max-width: 920px;
+  margin: 25px auto 0;
+}
+
+.item-ayuda {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 160px;
+  height: 210px;
+  background: #F3F4F5;
+  border-radius: 3px;
+  text-align: center;
+  padding: 8px;
+}
+.item-ayuda span {
+  color: #003287;
+  font-weight: bold;
+  font-size: 16px;
 }
 
 .home-box {
