--- a/css/main.css
+++ b/css/main.css
@@ -3144,6 +3144,12 @@ body {
   background-color: #19CE74;
   border-color: #109954;
   padding: 0 30px;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+.btn-busqueda i {
+  position: relative;
+  top: 2px;
 }
 
 .btn-consultar {
@@ -3156,6 +3162,20 @@ body {
 .btn-consultar:hover {
   background-color: #E69300;
   color: white;
+}
+
+.btn-mapa {
+  color: #fff;
+  background-color: white;
+  border-color: #BDBDBD;
+  padding: 0 20px;
+  border-left: 0;
+  border-top-right-radius: 100px;
+  border-bottom-right-radius: 100px;
+}
+.btn-mapa i {
+  position: relative;
+  top: 2px;
 }
 
 .header-top {
@@ -3379,29 +3399,27 @@ body {
 .home {
   background-position: top center;
   background-repeat: no-repeat;
-  height: 1500px;
+  height: 3500px;
 }
 
 section.section-ayuda {
   margin-top: 116px;
 }
 
-.subtitle {
+.title-section {
   color: #003287;
   font-family: "Raleway", sans-serif;
   font-size: 37px;
-  width: 100%;
   text-align: center;
   font-weight: bold;
 }
 
 .box-pregunta {
   margin-top: 6px;
-  margin: 4px auto 0;
+  margin: 10px auto;
+  max-width: 540px;
 }
-
 .box-pregunta .input-busqueda {
-  width: 430px;
   height: 60px;
   background-color: #F3F4F5;
   border-top-left-radius: 5px;
@@ -3411,10 +3429,9 @@ section.section-ayuda {
   font-size: 14px;
   color: #5F6268;
 }
-
-.btn-busqueda {
-  border-top-right-radius: 5px;
-  border-bottom-right-radius: 5px;
+.box-pregunta .input-busqueda:focus {
+  -webkit-box-shadow: inset 0 -1px 0 #ddd;
+          box-shadow: inset 0 -1px 0 #ddd;
 }
 
 .box-items-pregunta {
@@ -3426,7 +3443,7 @@ section.section-ayuda {
           justify-content: space-between;
   width: 100%;
   max-width: 920px;
-  margin: 25px auto 0;
+  margin: 40px auto 0;
 }
 
 .item-ayuda {
@@ -3458,6 +3475,7 @@ section.section-ayuda {
 
 .section-factibilidad {
   margin-top: 50px;
+  padding-bottom: 55px;
 }
 .section-factibilidad .container-fluid {
   position: relative;
@@ -3493,20 +3511,188 @@ section.section-ayuda {
 }
 
 .item-fact {
-  margin-bottom: 66px;
+  margin-bottom: 72px;
+}
+.item-fact:last-child {
+  margin-bottom: 0;
 }
 .item-fact h3 {
   font-family: Raleway;
   font-weight: bold;
   font-size: 28px;
-  margin-bottom: 14px;
+  margin-bottom: 0.8rem;
   color: #2274FF;
 }
 .item-fact p {
   font-family: Inter;
   font-size: 16px;
   line-height: 23px;
-  margin-bottom: 26px;
+  margin-bottom: 1.6rem;
+}
+
+section.section-trabajos {
+  margin-top: 66px;
+}
+
+.subtitle-section {
+  text-align: center;
+  color: #5F6268;
+}
+
+.box-busqueda-mapa {
+  margin-top: 6px;
+  margin: 22px auto;
+  max-width: 504px;
+}
+.box-busqueda-mapa .input-mapa {
+  height: 60px;
+  background-color: white;
+  border-top-left-radius: 100px;
+  border-bottom-left-radius: 100px;
+  border: 1px solid #B7C0CE;
+  padding: 0.375rem 1rem;
+  font-size: 14px;
+  color: #5F6268;
+}
+.box-busqueda-mapa .input-mapa:focus {
+  -webkit-box-shadow: inset 0 -1px 0 #ddd;
+          box-shadow: inset 0 -1px 0 #ddd;
+}
+
+.box-mapa-all {
+  margin: 17px 0;
+}
+
+.lista-tipo {
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 36px;
+}
+.lista-tipo li {
+  text-align: center;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  /*  margin: 0 34px 0 0;
+   padding: 0 34px 0 0; */
+  /* &:after {
+      content: '|';
+      position: relative;
+  } */
+}
+.lista-tipo li a {
+  color: #003287;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+  padding-right: 15px;
+  text-align: left;
+  max-width: 230px;
+  line-height: 20px;
+}
+.lista-tipo li a i {
+  margin-right: 18px;
+}
+.lista-tipo li a:last-child {
+  padding-right: 0;
+}
+.lista-tipo li a.active {
+  color: #2274FF;
+}
+.lista-tipo li a.active svg path {
+  fill: #2274FF;
+}
+.lista-tipo li > span {
+  color: #BFC1C5;
+}
+.lista-tipo li:last-child {
+  margin-right: 0;
+  padding-right: 0;
+}
+
+.resultado-mapa {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 36px;
+}
+
+.item-mapa {
+  border: 1px solid #BFC1C5;
+  color: #003287;
+  font-size: 14px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-radius: 5px;
+  padding: 8px 16px 8px 8px;
+  width: 368px;
+  margin-bottom: 20px;
+}
+.item-mapa .icon {
+  width: 86px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-right: 2px;
+}
+
+.item-dato {
+  width: 100%;
+}
+.item-dato .item-title {
+  font-weight: bold;
+}
+.item-dato .item-texto {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.item-dato .row-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.mapa {
+  background-image: url(../images/mapa.jpg);
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  width: 756px;
+  margin-left: 25px;
 }
 
 .home-box {
