--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -34,6 +34,12 @@
     background-color: $green;
     border-color: #109954;;
     padding: 0 30px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    i {
+        position: relative;
+        top: 2px;
+    }
 }
 
 .btn-consultar {
@@ -45,5 +51,19 @@
     &:hover {
         background-color: #E69300;
         color:white;
+    }
+}
+
+.btn-mapa {
+    color: #fff;
+    background-color: white;
+    border-color: #BDBDBD;
+    padding: 0 20px;
+    border-left: 0;
+    border-top-right-radius: 100px;
+    border-bottom-right-radius: 100px;
+    i {
+        position: relative;
+        top: 2px;
     }
 }
